syntax = "proto3";

option go_package = "types";

enum WorkflowEvent {
    WORKFLOW_CREATED = 0;
    WORKFLOW_UPDATED = 1;
    WORKFLOW_PARSED = 2;
    WORKFLOW_DELETED = 3;
    WORKFLOW_PARSING_FAILED = 4;
}

enum InvocationEvent {
    TASK_STARTED = 0; // origin: Engine
    TASK_SKIPPED = 1; // origin: Engine
    TASK_HEARTBEAT_REQUEST = 2; // origin: Engine
    TASK_HEARTBEAT_RESPONSE = 3; // origin: Task
    TASK_SUCCEEDED = 4; // origin: Task
    TASK_FAILED = 5; // origin: Task
    TASK_ABORTED = 6; // origin: Engine

    INVOCATION_CREATED = 7; // origin: User
    INVOCATION_COMPLETED = 8; // origin: Engine
    INVOCATION_CANCELED = 9; // origin: User
}
